[tool.poetry]
name = "goco-helpers"
version = "0.1.0"
description = ""
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "goco_helpers"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
astropy = "^5.2.1"
casatasks = "^6.5.3.28"
casatools = "^6.5.3.28"
spectral-cube = "^0.6.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
