[tool.poetry]
name = "goco-helpers"
version = "0.1.0"
description = "Package grouping helper functions for goco"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "goco_helpers"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
astropy = "^6.0.0"
casatasks = "^6.6.0.20"
casatools = "^6.6.0.20"
casadata = "^2023.9.18"
spectral-cube = "^0.6.5"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
