[tool.poetry]
name = "goco-helpers"
version = "0.2.2"
description = "Package grouping helper functions for goco"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "goco_helpers"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
astropy = "^7.0.0"
casatasks = "^6.6.0.20"
casatools = "^6.6.0.20"
casadata = "^2023.9.18"
#casaplotms = "^2.5.2"
numpy = "^2.3"
spectral-cube = "^0.6.5"

[tool.poetry.scripts]
config_generator = 'goco_helpers.config_generator:config_gen'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
